syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/api/messages/modules_chat_alerts";
package messages.modules_chat_alerts;

message ChatAlertsSettings {
	ChatAlertsFollowersSettings followers = 1;
	ChatAlertsRaids raids = 2;
	ChatAlertsDonations donations = 3;
	ChatAlertsSubscribers subscribers = 4;
	ChatAlertsCheers cheers = 5;
	ChatAlertsRedemptions redemptions = 6;
	ChatAlertsFirstUserMessage firstUserMessage = 7;
	ChatAlertsStreamOnline streamOnline = 8;
	ChatAlertsStreamOffline streamOffline = 9;
	ChatAlertsChatCleared chatCleared = 10;
	ChatAlertsBan ban = 11;
}

message ChatAlertsFollowersSettings {
	bool enabled = 1;
	repeated ChatAlertsMessage messages = 2;
	int32 cooldown = 3;
}

message ChatAlertsCountedMessage {
	int32 count = 1;
	string text = 2;
}

message ChatAlertsMessage {
	string text = 1;
}

message ChatAlertsRaids {
	bool enabled = 1;
	repeated ChatAlertsCountedMessage messages = 2;
	int32 cooldown = 3;
}

message ChatAlertsDonations {
	bool enabled = 1;
	repeated ChatAlertsCountedMessage messages = 2;
	int32 cooldown = 3;
}

message ChatAlertsSubscribers {
	bool enabled = 1;
	repeated ChatAlertsCountedMessage messages = 2;
	int32 cooldown = 3;
}

message ChatAlertsCheers {
	bool enabled = 1;
	repeated ChatAlertsCountedMessage messages = 2;
	int32 cooldown = 3;
}

message ChatAlertsRedemptions {
	bool enabled = 1;
	repeated ChatAlertsMessage messages = 2;
	int32 cooldown = 3;
}

message ChatAlertsFirstUserMessage {
	bool enabled = 1;
	repeated ChatAlertsMessage messages = 2;
	int32 cooldown = 3;
}

message ChatAlertsStreamOnline {
	bool enabled = 1;
	repeated ChatAlertsMessage messages = 2;
	int32 cooldown = 3;
}

message ChatAlertsStreamOffline {
	bool enabled = 1;
	repeated ChatAlertsMessage messages = 2;
	int32 cooldown = 3;
}

message ChatAlertsChatCleared {
	bool enabled = 1;
	repeated ChatAlertsMessage messages = 2;
	int32 cooldown = 3;
}

message ChatAlertsBan {
	bool enabled = 1;
	repeated ChatAlertsCountedMessage messages = 2;
	repeated string ignore_timeout_from = 3;
	int32 cooldown = 4;
}
